[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/StoreEquipmentPanel.gd" type="Script" id=3]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=4]
[ext_resource path="res://Resources/Textures/UI/SelectionFrame.png" type="Texture" id=5]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection2.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Textures/Entities/Player1.png" type="Texture" id=7]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.639752, 0.667045 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 200, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="StoreEquipmentPanel" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -49, -67 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 7.49999, -47.5 )
scale = Vector2( 1.6275, 0.7225 )
texture = ExtResource( 4 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( -54.5, -6 )
scale = Vector2( 0.7825, 0.15 )
texture = ExtResource( 4 )
energy = 2.5

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 5, -21 )
process_material = SubResource( 7 )

[node name="Frames" type="Node2D" parent="."]

[node name="SelectionFrame" type="Sprite" parent="Frames"]
position = Vector2( -56, -66.285 )
scale = Vector2( 3.00935, 3.6715 )
texture = ExtResource( 5 )

[node name="SelectionFrame3" type="Sprite" parent="Frames"]
position = Vector2( -58, -5 )
scale = Vector2( 3, 2.843 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = -239.0
margin_top = -141.0
margin_right = 242.0
margin_bottom = -106.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="EquipmentName" type="Label" parent="."]
margin_left = -282.0
margin_top = -18.0
margin_right = 199.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 13 )
text = "TITLE"
align = 1

[node name="EquipAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.48
script = ExtResource( 1 )

[node name="EquipAudio2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.48
script = ExtResource( 1 )

[node name="ApplyMore" type="Button" parent="."]
margin_left = 37.2
margin_top = -86.0
margin_right = 80.2
margin_bottom = -50.0
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
shortcut_in_tooltip = false
text = ">"
flat = true

[node name="ApplyLess" type="Button" parent="."]
margin_left = -190.0
margin_top = -86.0
margin_right = -147.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
shortcut_in_tooltip = false
text = "<"
flat = true

[connection signal="pressed" from="ApplyMore" to="." method="_on_ApplyMore_pressed"]
[connection signal="pressed" from="ApplyLess" to="." method="_on_ApplyLess_pressed"]
